# secscan_mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.cursor/rules/: git-commits.mdc  git-workflow.mdc  project-context.mdc  python-standards.mdc
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  PUBLISHING.md  setup.md
docs/examples/: cursor-mcp.json  vscode-mcp.json  with-env-mcp.json
scripts/: release.sh
src/secscan_mcp/: __init__.py  normalize.py  paths.py  runner.py  server.py
src/secscan_mcp/engines/: __init__.py  _util.py  bandit.py  base.py  checkov.py  custom.py  git_history.py  gitleaks.py  osv.py  semgrep.py
src/secscan_mcp/rules/: __init__.py  custom_secrets.yaml  loader.py
tests/: conftest.py  test_custom_engine.py  test_git_history.py  test_integration.py  test_normalize.py  test_paths.py  test_rules_loader.py  test_runner.py  test_version.py
tests/fixtures/sample_repo/: leak.py
