[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secscan-mcp"
version = "0.1.0"
description = "MCP server for codebase security scanning (secrets, SAST, SCA, IaC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "secscan-mcp contributors" }]
keywords = ["mcp", "security", "sast", "secrets", "scanner"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "mcp>=1.6.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "types-PyYAML>=6.0",
]

[project.scripts]
secscan-mcp = "secscan_mcp.server:main"

[project.urls]
Documentation = "https://github.com/your-org/secscan-mcp#readme"
Repository = "https://github.com/your-org/secscan-mcp"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/secscan_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/PLAN.md",
  "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["secscan_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["secscan_mcp.server"]
disable_error_code = ["misc", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: tests that invoke external scanner CLIs",
  "slow: long-running scans",
]

[tool.coverage.run]
source = ["secscan_mcp"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_empty = true
